--- a/Module_02_Lab_Exercise-1.ipynb
+++ b/Module_02_Lab_Exercise-1.ipynb
@@ -2,7 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Outared/ITAI1371/blob/main/Module_02_Lab_Exercise-1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "plZQQ1pvCCK2"
+      },
       "source": [
         "# Module 2 Lab Exercise: Tools Used in Machine Learning\n",
         "\n",
@@ -42,7 +54,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "ENYHrU7pCCK3"
+      },
       "source": [
         "## Environment Setup Instructions\n",
         "\n",
@@ -71,7 +85,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "PZv27V71CCK3"
+      },
       "outputs": [],
       "source": [
         "# Install required libraries (uncomment if needed)\n",
@@ -85,14 +101,16 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')  # Hide warning messages for cleaner output\n",
         "\n",
-        "print(\"\u2705 All libraries imported successfully!\")\n",
+        "print(\"✅ All libraries imported successfully!\")\n",
         "print(f\"Pandas version: {pd.__version__}\")\n",
         "print(f\"NumPy version: {np.__version__}\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Du6gX-vwCCK3"
+      },
       "source": [
         "## Part 2: Loading and Exploring Your First Dataset\n",
         "\n",
@@ -102,7 +120,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "lchcnW4eCCK4"
+      },
       "outputs": [],
       "source": [
         "# Load a simple dataset (Iris flowers - a classic beginner dataset)\n",
@@ -119,7 +139,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "skhTq-XwCCK4"
+      },
       "outputs": [],
       "source": [
         "# Convert to pandas DataFrame for easier handling\n",
@@ -136,7 +158,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Bq0PwUbLCCK4"
+      },
       "source": [
         "## Part 3: Creating Your First Visualization\n",
         "\n",
@@ -146,7 +170,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Zy7WrAJiCCK4"
+      },
       "outputs": [],
       "source": [
         "# Create a simple scatter plot\n",
@@ -157,10 +183,10 @@
         "\n",
         "for species in df['species'].unique():\n",
         "    species_data = df[df['species'] == species]\n",
-        "    plt.scatter(species_data['sepal length (cm)'], \n",
+        "    plt.scatter(species_data['sepal length (cm)'],\n",
         "                species_data['sepal width (cm)'],\n",
-        "                c=species_colors[species], \n",
-        "                label=species, \n",
+        "                c=species_colors[species],\n",
+        "                label=species,\n",
         "                alpha=0.7)\n",
         "\n",
         "plt.xlabel('Sepal Length (cm)')\n",
@@ -170,12 +196,14 @@
         "plt.grid(True, alpha=0.3)\n",
         "plt.show()\n",
         "\n",
-        "print(\"\ud83c\udf89 Congratulations! You've created your first data visualization!\")"
+        "print(\"🎉 Congratulations! You've created your first data visualization!\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "eK69zIlQCCK4"
+      },
       "source": [
         "## Part 4: Practice with Basic Data Operations\n",
         "\n",
@@ -185,7 +213,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "QXVOJ_43CCK4"
+      },
       "outputs": [],
       "source": [
         "# Basic statistical analysis\n",
@@ -205,7 +235,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "RWDknLd_CCK4"
+      },
       "source": [
         "## Part 5: GitHub and Documentation Best Practices\n",
         "\n",
@@ -232,7 +264,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "OCttSi46CCK4"
+      },
       "source": [
         "## Assessment: Tool Familiarity Check\n",
         "\n",
@@ -242,7 +276,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Kk-aPv2zCCK4"
+      },
       "outputs": [],
       "source": [
         "# Task 1: Create a simple calculation using NumPy\n",
@@ -260,13 +296,15 @@
         "# Verification (don't modify)\n",
         "assert isinstance(mean_sepal_length, (float, np.floating)), \"Mean should be a number\"\n",
         "assert isinstance(std_sepal_length, (float, np.floating)), \"Std should be a number\"\n",
-        "print(\"\u2705 Task 1 completed successfully!\")"
+        "print(\"✅ Task 1 completed successfully!\")"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "55OvEJtkCCK4"
+      },
       "outputs": [],
       "source": [
         "# Task 2: Create a simple bar chart showing species counts\n",
@@ -280,12 +318,14 @@
         "plt.show()\n",
         "\n",
         "print(f\"Species distribution: {dict(species_counts)}\")\n",
-        "print(\"\u2705 Task 2 completed successfully!\")"
+        "print(\"✅ Task 2 completed successfully!\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "5ivVmomUCCK4"
+      },
       "source": [
         "## Your Analysis and Reflection\n",
         "\n",
@@ -316,17 +356,19 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "AlWBMx5uCCK4"
+      },
       "source": [
         "## Lab Summary and Next Steps\n",
         "\n",
         "### What You've Accomplished:\n",
-        "\u2705 Set up your machine learning development environment  \n",
-        "\u2705 Imported and used essential Python libraries  \n",
-        "\u2705 Loaded and explored your first dataset  \n",
-        "\u2705 Created your first data visualization  \n",
-        "\u2705 Practiced professional documentation with Markdown  \n",
-        "\u2705 Learned about GitHub for project management  \n",
+        "✅ Set up your machine learning development environment  \n",
+        "✅ Imported and used essential Python libraries  \n",
+        "✅ Loaded and explored your first dataset  \n",
+        "✅ Created your first data visualization  \n",
+        "✅ Practiced professional documentation with Markdown  \n",
+        "✅ Learned about GitHub for project management  \n",
         "\n",
         "### Preparation for Module 3:\n",
         "In the next lab, you'll:\n",
@@ -347,7 +389,7 @@
         "- [GitHub Guides](https://guides.github.com/)\n",
         "- [Jupyter Notebook Tips](https://jupyter-notebook.readthedocs.io/)\n",
         "\n",
-        "**Great job completing Module 2! You're now equipped with the essential tools for machine learning.** \ud83c\udf89"
+        "**Great job completing Module 2! You're now equipped with the essential tools for machine learning.** 🎉"
       ]
     }
   ],
@@ -368,8 +410,12 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.5"
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 0
 }
